perf(load): load the webpacked notebook

--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "prebuild": "rimraf ./app/build",
-    "build": "babel src --out-dir ./app/build",
+    "build": "npm run build:renderer; npm run build:main",
+    "build:renderer": "webpack",
+    "build:main": "babel src/main --out-dir ./app/build/main",
     "build:icon": "./scripts/make_icons.sh && cd static/icons && iconutil -c icns nteract.iconset && mv nteract.icns ../icon.icns",
     "build:docs": "esdoc -c esdoc.json",
-    "build:watch": "npm run build -- --watch",
     "test": "npm run test:unit",
     "pretest:functional": "npm run build",
     "sublaunch": "electron-mocha --compilers js:babel-core/register",
