--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
     "prebuild": "rimraf ./app/build",
-    "build": "npm run build:renderer; npm run build:main",
-    "build:renderer": "webpack",
+    "build": "npm run build:renderer && npm run build:main",
+    "build:renderer": "webpack --progress --colors",
+    "build:renderer:watch": "npm run build:renderer -- --watch",
     "build:main": "babel src/main --out-dir ./app/build/main",
     "build:icon": "./scripts/make_icons.sh && cd static/icons && iconutil -c icns nteract.iconset && mv nteract.icns ../icon.icns",
     "build:docs": "esdoc -c esdoc.json",
