--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "pack": "npm install && npm run clean && npm run build && build --dir",
     "dist": "npm install && npm run clean && npm run build && build",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
-    "diagnostics": "scripts/kernelspecs.js"
+    "diagnostics": "app/diagnostics/kernelspecs.js"
   },
   "build": {
     "electronVersion": "1.4.3",
