feat(cli): Add awesome start scripts

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     },
     "win": {
       "target": "nsis"
-    }
+    },
+    "extraResources": "bin"
   },
   "greenkeeper": {
     "ignore": [
