--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,7 @@
     "commonmark": "^0.26.0",
     "commonmark-react-renderer": "^4.3.1",
     "commutable": "^1.1.3",
+    "electron-context-menu": "^0.6.0",
     "electron-json-storage": "^2.0.0",
     "electron-log": "^1.1.0",
     "enchannel": "^1.1.3",
