--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "command-exists": "^1.0.2",
     "cross-env": "^3.1.3",
     "electron": "1.4.4",
+    "electron-context-menu": "^0.6.0",
     "electron-builder": "^7.13.0",
     "electron-mocha": "^3.0.6",
     "electron-react-devtools": "^0.4.0",
