--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "postinstall": "node scripts/check-deps.js && install-app-deps",
+    "reinstall": "npm run clean && rimraf node_modules app/node_modules/ && npm install",
     "prestart": "npm run build",
     "start": "cross-env NODE_ENV=development ./node_modules/electron/cli.js ./app/",
     "prepublish": "npm run build",
