--- a/app/package.json
+++ b/app/package.json
@@ -36,6 +36,7 @@
     "kernelspecs": "^1.0.1",
     "leaflet": "^1.0.1",
     "mathjax-electron": "^1.1.1",
+    "mkdirp": "^0.5.1",
     "moment": "^2.15.0",
     "normalize.css": "^5.0.0",
     "nteract-assets": "^2.1.0",
