--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "jsdom": "^9.4.2",
     "json-loader": "^0.5.4",
     "jsx-chai": "^4.0.0",
+    "mkdirp": "^0.5.1",
     "mocha": "^3.0.2",
     "mock-require": "^1.3.0",
     "nyc": "^8.3.0",
