--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "win": {
       "target": "nsis"
     },
-    "extraResources": "bin"
+    "extraResources": "bin",
+    "asar": false
   },
   "greenkeeper": {
     "ignore": [
