--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "electron-log": "^1.1.0",
     "enchannel": "^1.1.3",
     "enchannel-zmq-backend": "^2.5.0",
+    "electron-react-devtools": "^0.4.0",
     "github": "^5.0.0",
     "immutable": "^3.7.6",
     "jupyter-paths": "^1.0.2",
