--- a/app/package.json
+++ b/app/package.json
@@ -62,6 +62,9 @@
     "spawn-rx": "^2.0.3",
     "spawnteract": "^2.2.0",
     "uuid": "^2.0.3",
+    "vega": "^2.6.3",
+    "vega-embed": "^2.2.0",
+    "vega-lite": "^1.3.1",
     "yargs": "^6.3.0"
   }
 }
