dx(start): Add spawn script to start nteract without building

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "postinstall": "node scripts/check-deps.js && install-app-deps",
     "reinstall": "npm run clean && rimraf node_modules && npm install",
     "prestart": "npm run build",
-    "start": "cross-env NODE_ENV=development electron .",
+    "start": "npm run spawn",
+    "spawn": "cross-env NODE_ENV=development electron .",
     "clean": "rimraf lib dist",
     "lint": "eslint src",
     "lint:fix": "eslint src --fix",
